# CUDAWorks

./: .gitignore  CMakeLists.txt  README.md
Boids/: CMakeLists.txt  Makefile  README.md  boid.frag  boid.vert  boidSystem.cpp  boidSystem.cuh  boidSystem.h  boidSystem_cuda.cu  boidSystem_kernel.cuh  boids.cpp  renderer.cpp  renderer.h  shaders.h  sim_params.cuh
VolRender/: CMakeLists.txt  Makefile  README.md  volRender.cpp  volRender_kernel.cu  volumePrep.cpp
VolRender/data/: custom.raw
inc/: helper_cuda.h  helper_gl.h
template/: Makefile  template.cpp
